Bug 205229 - The "run as different user" option doesn't work
Summary: The "run as different user" option doesn't work
Status: RESOLVED FIXED
Alias: None
Product: krunner
Classification: Plasma
Component: general (other bugs)
Version First Reported In: unspecified
Platform: Gentoo Packages Linux
: VHI normal
Target Milestone: ---
Assignee: Plasma Bugs List
URL:
Keywords:
: 184037 212383 (view as bug list)
Depends on:
Blocks:
 
Reported: 2009-08-26 20:25 UTC by Elias Probst
Modified: 2010-11-17 18:04 UTC (History)
7 users (show)

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Elias Probst 2009-08-26 20:25:47 UTC
Version:            (using KDE 4.3.0)
OS:                Linux
Installed from:    Gentoo Packages

The "run as different user" option in krunner doesn't work at all.

The selected application just starts in the regular user context.

There was already a bug back in 4.1 times regarding this issue, but I'm not sure, whether this was due to the same reasons + I don't have b.k.o karma to re-open this one
bug#153571
Comment 1 Roger Pixley 2009-08-26 20:31:14 UTC
I can confirm this. I'm on KDE 4.3 on Kubuntu Jaunty. I'll try a trunk build later if possible but if you run something like a terminal or dolphin as another user it doesn't seem to care. This is a side note but why can you only do this on the applications' binary as invoked from the command line? Wouldn't it make sense that something like the applications entry from the menu can do this as well?
Comment 2 Elias Probst 2009-09-02 00:04:07 UTC
Still valid for 4.3.1
Comment 3 Arnd 2009-09-26 09:50:04 UTC
I can confirm this for KDE 4.3.1 on Sidux.
Comment 4 marek 2009-11-24 22:56:50 UTC
I confirm for 4.3.2.
Comment 5 Elias Probst 2009-11-25 01:48:07 UTC
Still happens on 4.3.3
Comment 6 Jacopo De Simoi 2010-01-09 13:00:10 UTC
*** Bug 184037 has been marked as a duplicate of this bug. ***
Comment 7 Jacopo De Simoi 2010-01-09 13:24:17 UTC
*** Bug 212383 has been marked as a duplicate of this bug. ***
Comment 8 Roger Pixley 2010-01-10 21:42:39 UTC
Still does not work as of KDE 4.4 RC
Comment 9 Elias Probst 2010-02-13 17:49:20 UTC
This option does still not work at all in 4.4.0

I'd prefer having this option disabled until it works instead of having an option which pretends to work but actually doesn't.

Could someone uncomment this for 4.4.1 (or even better: fix it! ;-) ).
Comment 10 Elias Probst 2010-02-13 17:50:26 UTC
This option does still not work at all in 4.4.0

I'd prefer having this option disabled until it works instead of having an option which pretends to work but actually doesn't.

Could someone disable this for 4.4.1 (or even better: fix it! ;-) ).
Comment 11 Elias Probst 2010-07-13 04:05:59 UTC
Now this problem slightly changed in 4.5 RC2.

It is unknown, whether the selected command is now actually run as a different user - when selecting the option to run as a different user, it is not possible at all to type a username and a password.

Both fields just seem to ignore clicking on them.
Comment 12 Matthias Fuchs 2010-11-17 18:00:06 UTC
SVN commit 1198162 by mfuchs:

The "run as different user" command works again now by using KDESu::SuProcess instead of KDESu::KDEsuClient. The later's behavior was hard to understand, like which pw to enter and how long they will be kept, now the pw will be only kept for this command and has to be always reentered.

Further improvements:
*The input-fields look different when deactivated.
*Also automatically changes the focus to the username-input-field if "use as a different user" is enabled.

BUG:205229

 M  +3 -2      shell_config.cpp  
 M  +7 -21     shellrunner.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198162
Comment 13 Matthias Fuchs 2010-11-17 18:04:06 UTC
SVN commit 1198163 by mfuchs:

Backport r1198162
The "run as different user" command works again now by using KDESu::SuProcess instead of KDESu::KDEsuClient. The later's behavior was hard to understand, like which pw to enter and how long they will be kept, now the pw will be only kept for this command and has to be always reentered.

Further improvements:
*The input-fields look different when deactivated.
*Also automatically changes the focus to the username-input-field if "use as a different user" is enabled.

CCBUG:205229

 M  +3 -2      shell_config.cpp  
 M  +7 -21     shellrunner.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1198163