The "run as different user" command works again now by using KDESu::SuProcess instead of KDESu::KDEsuClient. The later's behavior was hard to understand, like which pw to enter and how long they will be kept, now the pw will be only kept for this command and has to be always reentered.

Further improvements:
*The input-fields look different when deactivated.
*Also automatically changes the focus to the username-input-field if "use as a different user" is enabled.

BUG:205229

svn path=/trunk/KDE/kdebase/workspace/; revision=1198162